fixed issue w hamburger menu not showing up

--- a/css/contact.css
+++ b/css/contact.css
@@ -97,7 +97,7 @@
         margin-bottom: 2rem;
     }
     #contact {
-        height: 60vh;
+        height: 65vh;
         padding: 2rem;
     }
     #contact h1 {
